--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emergency Helpline Portal</title>
     <!-- favicon     -->
-     <link rel="shortcut icon" href="./assets/logo-dark.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/logo-dark.png" type="image/x-icon">
     <!-- Tailwind & Daisy UI -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -49,6 +49,9 @@
             </div>
         </div>
 
+
+
+
         <!-- Hero Section -->
         <div class="hero min-h-[300px] bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223]">
             <div class="hero-content text-center flex flex-col">
@@ -57,8 +60,8 @@
                     Emergency Helpline Portal
                 </h1>
                 <p class="text-white mt-2 text-sm md:text-base lg:text-lg">
-                    Government Emergency Services at Your Fingertip – A Project by <br />
-                    Government of the People’s Republic of Bangladesh
+                    Bangladesh Emergency Services – Instant access to all essential government <br> helplines for
+                    emergencies nationwide.
                 </p>
             </div>
         </div>
@@ -72,9 +75,10 @@
             <div class="md:col-span-3 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
                 <!-- Emergency Service  -->
                 <div class="card bg-white shadow hover:shadow-lg hover:scale-102 transition rounded-xl relative ">
-                    <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500"> <svg id="heartIcon"
-                            xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500">
+                        <svg id="heartIcon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                            stroke-linecap="round" stroke-linejoin="round"
                             class="lucide lucide-heart-icon lucide-heart">
                             <path
                                 d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5" />
